--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@
       <button data-sound="./sounds/beach.mp3" data-video="./video/beach.mp4">
         <img src="./svg/beach.svg" alt="beach">
       </button>
+      <button data-sound="./sounds/city.mp3" data-video="./video/city.mp4">
+        <img src="./svg/city.svg" alt="city">
+      </button>
     </div>
     <audio class="end">
       <source src="./sounds/sirei.mp3">
